--- a/Praktikum_1/pertemuan_1.ipynb
+++ b/Praktikum_1/pertemuan_1.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nama: Arya Putra Bahari 23.11.5494\n",
+    "Nama: Nama & Nim\n",
     "\n",
     "jawaban pertanyaan\n",
     "\n",
